# pylance-release-bug-7242

./: README.md  pyproject.toml
src/demo_bug/: __init__.py  hello.py
