[project]
    name = "demo-bug"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    authors = [{ name = "Test", email = "test@test.com" }]
    requires-python = ">=3.13"
    dependencies = []

    [project.scripts]
        demo-bug = "demo_bug:main"

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"
